--- a/MobileSensorX/res/layout/activity_main.xml
+++ b/MobileSensorX/res/layout/activity_main.xml
@@ -1,16 +1,63 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mobilesensorx.MainActivity" >
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
+    <LinearLayout android:layout_width="match_parent"
+	    android:layout_height="50dip"
+	    android:orientation="horizontal">
+	    
+            
+	    <Button android:id="@+id/bt_start_s"
+	        android:layout_width="0dip"
+	        android:layout_weight="1.0"
+	        android:layout_height="50dip"
+	        android:text="Start" />
+	    
+	    <Button android:id="@+id/bt_end_s"
+	        android:layout_width="0dip"
+	        android:layout_weight="1.0"
+	        android:layout_height="50dip"
+	        android:text="End" />
+	    
+	    <Button android:id="@+id/bt_get_all_sensors_s"
+	        android:layout_width="0dip"
+	        android:layout_weight="1.0"
+	        android:layout_height="50dip"
+	        android:text="List" />
+	    <Button android:id="@+id/bt_close"
+	        android:layout_width="50dip"
+	        android:layout_height="50dip"
+	        android:text="X" />
+    </LinearLayout>
+    
+	<TextView android:id="@+id/tx_storage_path"
+		        android:layout_width="match_parent"
+		        android:layout_height="20dip"
+		        android:background="#A9A9A9"/>   
+	<ScrollView android:id="@+id/ly_scroll_list"
+		    android:layout_width="match_parent"
+		    android:layout_height="0dip"
+		    android:layout_weight="1.0"
+		    android:orientation="vertical"
+		    android:scrollbars="vertical"
+			android:fadeScrollbars="false"
+			android:background="#FFFFE0">
+	    	        
+	    <LinearLayout android:id="@+id/ly_sensor_list"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical">
+		    
+		</LinearLayout>
+	</ScrollView>
+		
+	<TextView android:id="@+id/tx_reading_data"
+		        android:layout_width="match_parent"
+		        android:scrollbars="vertical"
+		        android:fadeScrollbars="false"
+		        android:layout_height="0dip"
+		        android:layout_weight="2.0"
+		        android:background="#A9A9A9"/>    	
+</LinearLayout>
