--- a/MobileSensorX/res/layout/activity_main.xml
+++ b/MobileSensorX/res/layout/activity_main.xml
@@ -4,15 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 	
-    <EditText android:id="@+id/et_frequency"
-		        android:layout_width="match_parent"
-		        android:layout_height="20dip"/>
     
     <LinearLayout android:layout_width="match_parent"
-	    android:layout_height="50dip"
+	    android:layout_height="40dip"
 	    android:orientation="horizontal">
 	    
-            
 	    <Button android:id="@+id/bt_start_s"
 	        android:layout_width="0dip"
 	        android:layout_weight="1.0"
@@ -35,7 +31,28 @@
 	        android:layout_height="50dip"
 	        android:text="X" />
     </LinearLayout>
-    
+    <LinearLayout android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	    <TextView
+	        android:id="@+id/tv_fre_note"
+	        android:layout_width="0dip"
+	        android:layout_weight="4.0"
+	        android:layout_height="wrap_content"
+	        android:textSize="20dp"
+	        android:text="Sampling Period:"/>
+	    <EditText
+	        android:id="@+id/et_frequency"
+	        android:layout_width="0dip"
+	        android:layout_weight="2.0"
+	        android:layout_height="wrap_content"/>
+	    
+	    <Spinner android:id="@+id/sp_unit"   
+           android:layout_width="0dip"
+           android:layout_weight="2.0"  
+           android:layout_height="wrap_content"> 
+	    </Spinner>  
+    </LinearLayout>
 	<TextView android:id="@+id/tx_storage_path"
 		        android:layout_width="match_parent"
 		        android:layout_height="20dip"
